--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
+    "http": "0.0.0",
+    "morgan": "^1.9.0",
+    "path": "^0.12.7",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
