--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+  },
+  "engines": {
+  "node": "6.11.3",
+  "npm": "3.10.10"
   },
   "private": true,
   "dependencies": {
